--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -1,51 +1,52 @@
 
-@misc{AIOverviewResearch,
+@online{AIOverviewResearch,
   title = {{{AI Overview Research}}},
-  journal = {AI Overview},
-  howpublished = {https://www.sap.com/products/artificial-intelligence/research.html}
+  url = {https://www.sap.com/products/artificial-intelligence/research.html},
+  organization = {{AI Overview}}
 }
 
 @article{beyerNearestNeighbor,
-  title = {When {{Is}} ``{{Nearest Neighbor}}'' {{Meaningful}}?},
+  title = {When {{Is}} “{{Nearest Neighbor}}” {{Meaningful}}?},
   author = {Beyer, Kevin and Goldstein, Jonathan and Ramakrishnan, Raghu and Shaft, Uri},
   pages = {19},
-  abstract = {We explore the effect of dimensionality on the ``nearest neighbor'' problem. We show that under a broad set of conditions (much broader than independent and identically distributed dimensions), as dimensionality increases, the distance to the nearest data point approaches the distance to the farthest data point. To provide a practical perspective, we present empirical results on both real and synthetic data sets that demonstrate that this effect can occur for as few as 10-15 dimensions.},
+  abstract = {We explore the effect of dimensionality on the “nearest neighbor” problem. We show that under a broad set of conditions (much broader than independent and identically distributed dimensions), as dimensionality increases, the distance to the nearest data point approaches the distance to the farthest data point. To provide a practical perspective, we present empirical results on both real and synthetic data sets that demonstrate that this effect can occur for as few as 10-15 dimensions.},
   langid = {english},
   file = {/Users/I518232/Zotero/storage/JNTP4SFM/Beyer et al. - When Is “Nearest Neighbor” Meaningful.pdf}
 }
 
 @book{buxmannKI2019,
-  title = {{K\"unstliche Intelligenz: mit Algorithmen zum wirtschaftlichen Erfolg}},
-  shorttitle = {{K\"unstliche Intelligenz}},
+  title = {Künstliche Intelligenz: mit Algorithmen zum wirtschaftlichen Erfolg},
+  shorttitle = {Künstliche Intelligenz},
   editor = {Buxmann, Peter and Schmidt, Holger},
-  year = {2019},
+  date = {2019},
   publisher = {{Springer Gabler}},
-  address = {{Berlin}},
+  location = {{Berlin}},
   doi = {10.1007/978-3-662-57568-0},
-  abstract = {Dieses Buch soll dabei helfen, die neuen Technologien und Anwendungspotenziale der k\"unstlichen Intelligenz besser zu verstehen und einzuordnen. Neben einer ausf\"uhrlichen und verst\"andlichen Vermittlung grundlegender Kenntnisse und \"okonomischer Effekte der k\"unstlichen Intelligenz enth\"alt es viele Anwendungsbeispiele bekannter Unternehmen. Konzerne wie Amazon, IBM, Microsoft, SAP oder VW lassen die Leser in ihre KI-Labors schauen und erkl\"aren konkrete Projekte zu Themen, wie z. B. Chatbots, Quantencomputing, Gesichtserkennung, sprachbasierte Systeme oder den Einsatz von KI-Anwendungen in den Bereichen Marketing, Vertrieb, Finanzen, Personalwesen, Produktion, Gesundheit sowie Logistik. Das Buch richtet sich an Entscheider in Unternehmen, Studierende, Dozenten und alle, die sich ein Bild \"uber die vielleicht wichtigste technologische Entwicklung in diesem Jahrhundert machen m\"ochten.(Verlagstext)},
+  abstract = {Dieses Buch soll dabei helfen, die neuen Technologien und Anwendungspotenziale der künstlichen Intelligenz besser zu verstehen und einzuordnen. Neben einer ausführlichen und verständlichen Vermittlung grundlegender Kenntnisse und ökonomischer Effekte der künstlichen Intelligenz enthält es viele Anwendungsbeispiele bekannter Unternehmen. Konzerne wie Amazon, IBM, Microsoft, SAP oder VW lassen die Leser in ihre KI-Labors schauen und erklären konkrete Projekte zu Themen, wie z. B. Chatbots, Quantencomputing, Gesichtserkennung, sprachbasierte Systeme oder den Einsatz von KI-Anwendungen in den Bereichen Marketing, Vertrieb, Finanzen, Personalwesen, Produktion, Gesundheit sowie Logistik. Das Buch richtet sich an Entscheider in Unternehmen, Studierende, Dozenten und alle, die sich ein Bild über die vielleicht wichtigste technologische Entwicklung in diesem Jahrhundert machen möchten.(Verlagstext)},
   isbn = {978-3-662-57568-0 978-3-662-57567-3},
   langid = {german},
+  pagetotal = {206},
   file = {/Users/I518232/Zotero/storage/3IKC5KGI/Buxmann and Schmidt - 2019 - Künstliche Intelligenz mit Algorithmen zum wirtsc.pdf}
 }
 
 @article{chowdhury2003,
   title = {Natural Language Processing},
   author = {{Gobinda G. Chowdhury}},
-  year = {2003},
-  month = jan,
-  journal = {Annual Review of Information Science and Technology},
+  date = {2003-01-31},
+  journaltitle = {Annual Review of Information Science and Technology},
   volume = {37},
   number = {1},
   pages = {51--89},
   publisher = {{Springer}},
   issn = {0066-4200},
-  doi = {10.1002/aris.1440370103}
+  doi = {10.1002/aris.1440370103},
+  url = {https://strathprints.strath.ac.uk/2611/1/strathprints002611.pdf}
 }
 
 @book{corePython,
   title = {Core Python Programming},
   author = {Chun, Wesley},
-  year = {2001},
+  date = {2001},
   volume = {1},
   publisher = {{Prentice Hall Professional}}
 }
@@ -53,43 +54,47 @@
 @inproceedings{CRISPDM2000,
   title = {{{CRISP-DM}} 1.0: {{Step-by-step}} Data Mining Guide},
   author = {Chapman, Peter and Clinton, Janet and Kerber, Randy and Khabaza, Tom and Reinartz, Thomas P. and Shearer, Colin and Wirth, Richard},
-  year = {2000},
+  date = {2000},
   file = {/Users/I518232/Zotero/storage/XWX5MT84/Chapman et al. - 2000 - CRISP-DM 1.0 Step-by-step data mining guide.pdf}
 }
 
-@misc{CRISPDMPoll,
+@online{CRISPDMPoll,
   title = {{{CRISP-DM}}, Still the Top Methodology for Analytics, Data Mining, or Data Science Projects},
   author = {{says}, Esport},
-  journal = {KDnuggets},
+  url = {https://www.kdnuggets.com/crisp-dm-still-the-top-methodology-for-analytics-data-mining-or-data-science-projects.html/},
+  urldate = {2022-03-29},
   abstract = {CRISP-DM remains the most popular methodology for analytics, data mining, and data science projects, with 43\% share in latest KDnuggets Poll, but a replacement for unmaintained CRISP-DM is long overdue.},
-  chapter = {2014 Oct News, Features},
   langid = {american},
+  organization = {{KDnuggets}},
   file = {/Users/I518232/Zotero/storage/HC5XIX9T/crisp-dm-top-methodology-analytics-data-mining-data-science-projects.html}
 }
 
-@misc{CRISPDMPopular2020,
+@online{CRISPDMPopular2020,
   title = {{{CRISP-DM}} Is {{Still}} the {{Most Popular Framework}} for {{Executing Data Science Projects}}},
   author = {Saltz, Jeff},
-  year = {2020},
-  month = nov,
-  journal = {Data Science Process Alliance},
+  date = {2020-11-30T01:31:31+00:00},
+  url = {https://www.datascience-pm.com/crisp-dm-still-most-popular/},
+  urldate = {2022-03-29},
   abstract = {Based on a recent poll conducted on our site, CRISP-DM remains as the most popular framework for data science projects.},
   langid = {american},
+  organization = {{Data Science Process Alliance}},
   file = {/Users/I518232/Zotero/storage/VCIPKW2Y/crisp-dm-still-most-popular.html}
 }
 
 @article{dataScienceProjectTypes,
   title = {{{CRISP-DM Twenty Years Later}}: {{From Data Mining Processes}} to {{Data Science Trajectories}}},
   shorttitle = {{{CRISP-DM Twenty Years Later}}},
-  author = {{Martinez-Plumed}, Fernando and {Contreras-Ochando}, Lidia and Ferri, Cesar and {Hernandez-Orallo}, Jose and Kull, Meelis and Lachiche, Nicolas and {Ramirez-Quintana}, Maria Jose and Flach, Peter},
-  year = {2021},
-  month = aug,
-  journal = {IEEE Transactions on Knowledge and Data Engineering},
+  author = {Martinez-Plumed, Fernando and Contreras-Ochando, Lidia and Ferri, Cesar and Hernandez-Orallo, Jose and Kull, Meelis and Lachiche, Nicolas and Ramirez-Quintana, Maria Jose and Flach, Peter},
+  date = {2021-08-01},
+  journaltitle = {IEEE Transactions on Knowledge and Data Engineering},
+  shortjournal = {IEEE Trans. Knowl. Data Eng.},
   volume = {33},
   number = {8},
   pages = {3048--3061},
   issn = {1041-4347, 1558-2191, 2326-3865},
   doi = {10.1109/TKDE.2019.2962680},
+  url = {https://ieeexplore.ieee.org/document/8943998/},
+  urldate = {2022-04-01},
   abstract = {CRISP-DM(CRoss-Industry Standard Process for Data Mining) has its origins in the second half of the nineties and is thus about two decades old. According to many surveys and user polls it is still the de facto standard for developing data mining and knowledge discovery projects. However, undoubtedly the field has moved on considerably in twenty years, with data science now the leading term being favoured over data mining. In this paper we investigate whether, and in what contexts, CRISP-DM is still fit for purpose for data science projects. We argue that if the project is goal-directed and process-driven the process model view still largely holds. On the other hand, when data science projects become more exploratory the paths that the project can take become more varied, and a more flexible model is called for. We suggest what the outlines of such a trajectory-based model might look like and how it can be used to categorise data science projects (goal-directed, exploratory or data management). We examine seven real-life exemplars where exploratory activities play an important role and compare them against 51 use cases extracted from the NIST Big Data Public Working Group. We anticipate this categorisation can help project planning in terms of time and cost characteristics.},
   langid = {english},
   file = {/Users/I518232/Zotero/storage/3QPU4C26/Martinez-Plumed et al. - 2021 - CRISP-DM Twenty Years Later From Data Mining Proc.pdf}
@@ -99,67 +104,72 @@
   title = {Parsing the Turing Test: Philosophical and Methodological Issues in the Quest for the Thinking Computer},
   shorttitle = {Parsing the Turing Test},
   editor = {Epstein, Robert and Roberts, Gary and Beber, Grace},
-  year = {2008},
+  date = {2008},
   publisher = {{Springer}},
-  address = {{New York}},
+  location = {{New York}},
   isbn = {978-1-4020-6708-2 978-1-4020-6710-5},
-  lccn = {Q335 .P35445 2008},
+  pagetotal = {517},
   keywords = {Artificial intelligence,Methodology,Philosophy}
 }
 
-@misc{externalData,
+@online{externalData,
   title = {Harnessing the Power of External Data | {{McKinsey}}},
-  howpublished = {https://www.mckinsey.com/business-functions/mckinsey-digital/our-insights/harnessing-the-power-of-external-data},
+  url = {https://www.mckinsey.com/business-functions/mckinsey-digital/our-insights/harnessing-the-power-of-external-data},
+  urldate = {2022-04-06},
   file = {/Users/I518232/Zotero/storage/QUMXN8XD/harnessing-the-power-of-external-data.html}
 }
 
-@misc{GeschichteSAP1972,
+@online{GeschichteSAP1972,
   title = {Geschichte Der {{SAP}}},
-  journal = {Die Anfangsjahre 1072-1980},
-  howpublished = {https://www.sap.com/germany/about/company/history/1972-1980.html}
+  url = {https://www.sap.com/germany/about/company/history/1972-1980.html},
+  organization = {{Die Anfangsjahre 1072-1980}}
 }
 
-@misc{internalExternalData,
+@online{internalExternalData,
   title = {3 {{Keys}} to {{Managing Data}} and {{Maximizing Business Intelligence}}},
   author = {at Worthwhile (worthwhile.com), The Fine Folks},
+  url = {https://worthwhile.com/insights/2017/02/20/data-business-intelligence/},
+  urldate = {2022-04-06},
   abstract = {To maximize your company data and build real business intelligence solutions, you need to understand these 3 dichotomies of data.},
-  howpublished = {https://worthwhile.com/insights/2017/02/20/data-business-intelligence/},
   file = {/Users/I518232/Zotero/storage/DTFJ394S/data-business-intelligence.html}
 }
 
-@misc{investopediaInvoices,
+@online{investopediaInvoices,
   title = {Understanding {{Invoices}}},
-  journal = {Investopedia},
+  url = {https://www.investopedia.com/terms/i/invoice.asp},
+  urldate = {2022-03-28},
   abstract = {An invoice records itemized transactions and is used for expense management and bookkeeping.},
-  howpublished = {https://www.investopedia.com/terms/i/invoice.asp},
   langid = {english},
+  organization = {{Investopedia}},
   file = {/Users/I518232/Zotero/storage/6IKKUTWY/invoice.html}
 }
 
-@misc{invoicesPurpose,
+@online{invoicesPurpose,
   title = {What {{Is}} the {{Purpose}} of an {{Invoice}}? | {{Invoicing Tips}} for {{Small Business}}},
   shorttitle = {What {{Is}} the {{Purpose}} of an {{Invoice}}?},
-  journal = {FreshBooks},
+  url = {https://www.freshbooks.com/hub/invoicing/how-do-invoices-work},
+  urldate = {2022-03-28},
   abstract = {The purpose of an invoice is to create a record of sale so businesses can get paid. Learn how professional invoices help small businesses receive payment faster.},
-  howpublished = {https://www.freshbooks.com/hub/invoicing/how-do-invoices-work},
   langid = {american},
+  organization = {{FreshBooks}},
   file = {/Users/I518232/Zotero/storage/AT8VLUY8/how-do-invoices-work.html}
 }
 
-@misc{JuergenMuellerBiography,
-  type = {Company {{Website}}},
+@online{JuergenMuellerBiography,
+  type = {Company Website},
   title = {Juergen {{Mueller}} Biography},
-  journal = {Juergen Mueller biography},
-  howpublished = {https://www.sap.com/about/company/leadership/juergen-mueller.html},
-  langid = {english}
+  url = {https://www.sap.com/about/company/leadership/juergen-mueller.html},
+  urldate = {2022-03-15},
+  langid = {english},
+  organization = {{Juergen Mueller biography}}
 }
 
 @incollection{KanbanAnderson,
-  booktitle = {{Kanban}},
+  booktitle = {Kanban},
   author = {Anderson, David},
-  year = {2011},
+  date = {2011},
   edition = {1st edition},
-  abstract = {erstes deutsches Buch zu Kanban Buch vom "Vater" von Kanban geschrieben Kanban ist "hype", gut mit Scrum in Projekten einzusetzen* \"Ubersetzer in der (agilen) Community sehr bekannt(haben die ersten Kanban-Schulungen in D mit David J. Anderson durchgef\"uhrt)},
+  abstract = {erstes deutsches Buch zu Kanban Buch vom "Vater" von Kanban geschrieben Kanban ist "hype", gut mit Scrum in Projekten einzusetzen* Übersetzer in der (agilen) Community sehr bekannt(haben die ersten Kanban-Schulungen in D mit David J. Anderson durchgeführt)},
   langid = {eng;ger},
   keywords = {Electronic books}
 }
@@ -176,27 +186,35 @@
   title = {The {{E-Invoicing Journey}} 2019-2025},
   author = {Koch, Bruno},
   pages = {7},
+  url = {https://www.billentis.com/The_einvoicing_journey_2019-2025.pdf},
   langid = {english},
   file = {/Users/I518232/Zotero/storage/PL4PH5EP/Koch - The E-Invoicing Journey 2019-2025.pdf}
 }
 
-@misc{largeDataSetBrownlee,
-  title = {7 {{Ways}} to {{Handle Large Data Files}} for {{Machine Learning}}}
+@online{largeDataSetBrownlee,
+  title = {7 {{Ways}} to {{Handle Large Data Files}} for {{Machine Learning}}},
+  author = {Brownlee, Jason},
+  date = {2020-12-10},
+  url = {https://machinelearningmastery.com/large-data-files-machine-learning/},
+  urldate = {2022-04-28},
+  organization = {{Machine Learning Mastery}}
 }
 
-@misc{largeDataSetMedium,
-  title = {What to {{Do When Your Data Is Too Big}} for {{Your Memory}}?}
+@online{largeDataSetMedium,
+  title = {What to {{Do When Your Data Is Too Big}} for {{Your Memory}}?},
+  url = {https://towardsdatascience.com/what-to-do-when-your-data-is-too-big-for-your-memory-65c84c600585#:~:text=Money%2Dcosting%20solution%3A%20One%20possible,arrangement%20to%20handle%20the%20workload.}
 }
 
-@misc{manualInvoiceProcessing,
-  title = {It's Costing How Much? {{The}} Truth about Manual Invoice Processing},
-  shorttitle = {It's Costing How Much?},
+@online{manualInvoiceProcessing,
+  title = {It’s Costing How Much? {{The}} Truth about Manual Invoice Processing},
+  shorttitle = {It’s Costing How Much?},
   author = {{SME}},
-  year = {2018},
-  month = may,
-  journal = {SME Magazine},
-  abstract = {By Daniel Ball, director, Wax Digital The paper-based invoice \textendash{} the thorn in the side of every finance team but a necessary part of doing business. In},
+  date = {2018-05-02T09:03:09+00:00},
+  url = {https://www.smeweb.com/2018/05/02/costing-much-truth-manual-invoice-processing/},
+  urldate = {2022-03-28},
+  abstract = {By Daniel Ball, director, Wax Digital The paper-based invoice – the thorn in the side of every finance team but a necessary part of doing business. In},
   langid = {british},
+  organization = {{SME Magazine}},
   file = {/Users/I518232/Zotero/storage/HET2JSWY/costing-much-truth-manual-invoice-processing.html}
 }
 
@@ -204,157 +222,164 @@
   title = {Distributed {{Representations}} of {{Words}} and {{Phrases}} and Their {{Compositionality}}},
   booktitle = {Advances in {{Neural Information Processing Systems}}},
   author = {Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
-  year = {2013},
+  date = {2013},
   volume = {26},
   publisher = {{Curran Associates, Inc.}},
+  url = {https://proceedings.neurips.cc/paper/2013/hash/9aa42b31882ec039965f3c4923ce901b-Abstract.html},
+  urldate = {2022-03-24},
   file = {/Users/I518232/Zotero/storage/LKTG7ZQV/Mikolov et al. - 2013 - Distributed Representations of Words and Phrases a.pdf}
 }
 
-@misc{modernInvoiceManagement,
+@online{modernInvoiceManagement,
   title = {Invoice Management for Modern Businesses: {{A}} Guide},
   shorttitle = {Invoice Management for Modern Businesses},
   author = {Whatman, Patrick},
+  url = {https://blog.spendesk.com/en/invoice-management},
+  urldate = {2022-03-28},
   abstract = {Invoice management hasn't kept up with the times. In most companies, it's still harder than it should be to pay suppliers quickly and easily. This guide will fix that.},
-  howpublished = {https://blog.spendesk.com/en/invoice-management},
   langid = {british},
   file = {/Users/I518232/Zotero/storage/T39ZUH2P/invoice-management.html}
 }
 
-@misc{pythonDocker,
+@online{pythonDocker,
   title = {Python - {{Pfficial Image}} | {{DockerHub}}},
-  howpublished = {https://hub.docker.com/\_/python}
+  url = {https://hub.docker.com/_/python}
 }
 
-@misc{pythonVsR,
-  title = {Python vs. {{R}}: {{What}}'s the {{Difference}}?}
+@online{pythonVsR,
+  title = {Python vs. {{R}}: {{What}}’s the {{Difference}}?},
+  url = {https://www.ibm.com/cloud/blog/python-vs-r}
 }
 
-@misc{rDocker,
+@online{rDocker,
   title = {R-Base - {{Official Image}}},
-  howpublished = {https://hub.docker.com/\_/r-base}
+  url = {https://hub.docker.com/_/r-base}
 }
 
 @article{robertsonTFIDF,
   title = {Understanding Inverse Document Frequency: {{On}} Theoretical Arguments for {{IDF}}},
   shorttitle = {Understanding Inverse Document Frequency},
   author = {Robertson, Stephen},
-  year = {2004},
-  journal = {Journal of Documentation},
+  date = {2004},
+  journaltitle = {Journal of Documentation},
   volume = {60},
   pages = {2004},
-  abstract = {The term weighting function known as IDF was proposed in 1972, and has since been extremely widely used, usually as part of a TF*IDF function. It is often described as a heuristic, and many papers have been written (some based on Shannon's Information Theory) seeking to establish some theoretical basis for it. Some of these attempts are reviewed, and it is shown that the Information Theory approaches are problematic, but that there are good theoretical justifications of both IDF and TF*IDF in traditional probabilistic model of information retrieval.},
+  abstract = {The term weighting function known as IDF was proposed in 1972, and has since been extremely widely used, usually as part of a TF*IDF function. It is often described as a heuristic, and many papers have been written (some based on Shannon’s Information Theory) seeking to establish some theoretical basis for it. Some of these attempts are reviewed, and it is shown that the Information Theory approaches are problematic, but that there are good theoretical justifications of both IDF and TF*IDF in traditional probabilistic model of information retrieval.},
   file = {/Users/I518232/Zotero/storage/XCFQKQIS/Robertson - 2004 - Understanding inverse document frequency On theor.pdf;/Users/I518232/Zotero/storage/7JXSAWQ5/summary.html}
 }
 
-@misc{rutschmannSAPLeonardo2021,
+@online{rutschmannSAPLeonardo2021,
   title = {The {{Journey}} from {{SAP Leonardo Machine Learning Foundation}} to {{SAP AI Core}} and {{SAP AI Launchpad}}},
   author = {{Daniel Rutschmann}},
-  year = {2021},
-  month = oct,
-  journal = {SAP Community},
-  howpublished = {https://blogs.sap.com/2021/10/11/the-journey-from-sap-leonardo-machine-learning-foundation-to-sap-ai-core-and-sap-ai-launchpad/}
+  date = {2021-10-11},
+  url = {https://blogs.sap.com/2021/10/11/the-journey-from-sap-leonardo-machine-learning-foundation-to-sap-ai-core-and-sap-ai-launchpad/},
+  organization = {{SAP Community}}
 }
 
-@misc{RVsPythonJohnson,
-  title = {R {{Vs Python}}: {{What}}'s the {{Difference}}?}
+@online{RVsPythonJohnson,
+  title = {R {{Vs Python}}: {{What}}’s the {{Difference}}?},
+  url = {https://www.guru99.com/r-vs-python.html}
 }
 
-@misc{SAPSEExecutive,
+@online{SAPSEExecutive,
   title = {{{SAP SE Executive Board}}},
-  journal = {SAP SE Corporate Governance},
-  howpublished = {https://www.sap.com/investors/en/governance/executive-board.html}
+  url = {https://www.sap.com/investors/en/governance/executive-board.html},
+  organization = {{SAP SE Corporate Governance}}
 }
 
-@misc{scaleAI,
+@online{scaleAI,
   title = {{{ScaleAI}}},
-  howpublished = {https://scale.com/document-ai}
+  url = {https://scale.com/document-ai}
 }
 
-@misc{schmitzLeonardo,
-  title = {{Was ist SAP Leonardo?}},
+@online{schmitzLeonardo,
+  title = {Was ist SAP Leonardo?},
   author = {{Andreas Schmitz}},
-  year = {2017},
-  month = jul,
+  date = {2017-07-11},
+  url = {https://news.sap.com/germany/2017/07/was-ist-sap-leonardo-iot/},
   langid = {german}
 }
 
-@misc{SCRUMSolo,
+@online{SCRUMSolo,
   title = {Scrum and the {{Solo Dev}}},
   author = {Gant, Michael},
-  year = {2019},
-  month = jun,
-  journal = {Medium},
-  abstract = {Can a solo developer follow a Scrum process? Google it, you'll get a few different answers. Here's mine.},
+  date = {2019-06-18T16:20:08},
+  url = {https://medium.com/@jmgant.cleareyeconsulting/scrum-and-the-solo-dev-fb8e810ed42b},
+  urldate = {2022-03-29},
+  abstract = {Can a solo developer follow a Scrum process? Google it, you’ll get a few different answers. Here’s mine.},
   langid = {english},
+  organization = {{Medium}},
   file = {/Users/I518232/Zotero/storage/X4YGSRA7/scrum-and-the-solo-dev-fb8e810ed42b.html}
 }
 
-@misc{srivastavaDataMining,
+@online{srivastavaDataMining,
   title = {Difference {{Between Data Science}} and {{Data Mining}}},
   author = {Srivastava, Astitva},
-  year = {2020},
-  month = jul,
-  journal = {The Startup},
-  abstract = {Sometimes it might confusing to some people to distinguish between Data Science and Data Mining, so after reading this article it will\ldots},
+  date = {2020-07-25T15:35:55},
+  url = {https://medium.com/swlh/difference-between-data-science-and-data-mining-37104b1c6a61},
+  urldate = {2022-04-06},
+  abstract = {Sometimes it might confusing to some people to distinguish between Data Science and Data Mining, so after reading this article it will…},
   langid = {english},
+  organization = {{The Startup}},
   file = {/Users/I518232/Zotero/storage/N2CZY6SV/difference-between-data-science-and-data-mining-37104b1c6a61.html}
 }
 
-@misc{structuredAndUnstructuredData,
+@online{structuredAndUnstructuredData,
   title = {Structured vs {{Unstructured Data}} 101: {{Top Guide}}},
   shorttitle = {Structured vs {{Unstructured Data}} 101},
-  year = {2021},
-  month = may,
-  journal = {Datamation},
+  date = {2021-05-21T15:00:00+00:00},
+  url = {https://www.datamation.com/big-data/structured-vs-unstructured-data/},
+  urldate = {2022-03-28},
   abstract = {Structured Data is organized \& often formatted, and Unstructured Data is raw data of various types. Learn key differences \& how each is used.},
-  howpublished = {https://www.datamation.com/big-data/structured-vs-unstructured-data/},
   langid = {american},
+  organization = {{Datamation}},
   file = {/Users/I518232/Zotero/storage/8I9BQTGZ/structured-vs-unstructured-data.html}
 }
 
 @article{turing1950,
-  title = {I.\textemdash{{COMPUTING MACHINERY AND IN}}TEL{{LIGENCE}}},
+  title = {I.—{{COMPUTING MACHINERY AND IN}}℡{{LIGENCE}}},
   author = {TURING, A. M.},
-  year = {1950},
-  month = oct,
-  journal = {Mind},
+  date = {1950-10},
+  journaltitle = {Mind},
   volume = {LIX},
   number = {236},
   pages = {433--460},
   issn = {0026-4423},
   doi = {10.1093/mind/LIX.236.433},
+  url = {https://doi.org/10.1093/mind/LIX.236.433},
   annotation = {\_eprint: https://academic.oup.com/mind/article-pdf/LIX/236/433/30123314/lix-236-433.pdf}
 }
 
-@misc{whyExternalData,
+@online{whyExternalData,
   title = {Why External Data Should Be Part of Your Data Strategy},
-  journal = {MIT Sloan},
+  url = {https://mitsloan.mit.edu/ideas-made-to-matter/why-external-data-should-be-part-your-data-strategy},
+  urldate = {2022-04-06},
   abstract = {Third-party data is out there to find and use. To make external data work for your firm, vet it carefully and make it part of a centralized data strategy.},
-  howpublished = {https://mitsloan.mit.edu/ideas-made-to-matter/why-external-data-should-be-part-your-data-strategy},
   langid = {english},
+  organization = {{MIT Sloan}},
   file = {/Users/I518232/Zotero/storage/2EIVF7K3/why-external-data-should-be-part-your-data-strategy.html}
 }
 
 @inproceedings{wirthCRISPDMStandardProcess2000,
   title = {{{CRISP-DM}}: {{Towards}} a Standard Process Model for Data Mining},
   booktitle = {Proceedings of the 4th International Conference on the Practical Applications of Knowledge Discovery and Data Mining},
-  author = {Wirth, R{\"u}diger and Hipp, Jochen},
-  year = {2000},
+  author = {Wirth, Rüdiger and Hipp, Jochen},
+  date = {2000},
   volume = {1},
   pages = {29--40},
   publisher = {{Manchester}},
   file = {/Users/I518232/Zotero/storage/GNBBS264/Wirth and Hipp - CRISP-DM Towards a Standard Process Model for Dat.pdf}
 }
 
-@article{word2vec2013,
+@unpublished{word2vec2013,
   title = {Efficient {{Estimation}} of {{Word Representations}} in {{Vector Space}}},
   author = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
-  year = {2013},
-  month = sep,
-  journal = {arXiv:1301.3781 [cs]},
+  date = {2013-09-06},
   eprint = {1301.3781},
   eprinttype = {arxiv},
   primaryclass = {cs},
+  url = {http://arxiv.org/abs/1301.3781},
+  urldate = {2022-03-24},
   abstract = {We propose two novel model architectures for computing continuous vector representations of words from very large data sets. The quality of these representations is measured in a word similarity task, and the results are compared to the previously best performing techniques based on different types of neural networks. We observe large improvements in accuracy at much lower computational cost, i.e. it takes less than a day to learn high quality word vectors from a 1.6 billion words data set. Furthermore, we show that these vectors provide state-of-the-art performance on our test set for measuring syntactic and semantic word similarities.},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Computation and Language},
@@ -362,7 +387,7 @@
 }
 
 @article{zotero-1,
-  type = {Article}
+  type = {article}
 }
 
 
