--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -23,7 +23,7 @@
 \newcommand{\matrikelnr}{631971}
 \newcommand{\kurs}{IBAIT19}
 \newcommand{\bearbeitungsmonat}{Januar 2018}
-\newcommand{\abgabe}{01. Februar 2018}
+\newcommand{\abgabe}{07.06.2022}
 \newcommand{\bearbeitungszeitraum}{01.10.2017 - 31.01.2018}
 \newcommand{\firmaName}{SAP SE}
 \newcommand{\firmaStrasse}{Dietmar-Hopp-Allee 16}
